--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,12 @@
 /* Universal Selector */
 
+/* *{
+    border: 2px solid red;
+} */
+
+body {
+    background-color: darkgray;
+}
 
 .navbar{
     display: flex;
@@ -20,6 +27,17 @@ Box Model is made up of 4 parts: Content, Padding, Border, Margin
     Padding - Clears an area around the content. The padding is transparent
     Border - A border that goes around the padding and content
     Margin - Clears an area outside the border. The margin is transparent
+*/
+.box-model{
+    border: 4px solid green;
+    padding: 25px;
+    margin: 20px;
+}
+
+/* 
+Total Size:
+    Height: 100px (content) + 2*25px (padding) + 2*4px (border) + 2*20px (margin) = 198px
+    Width: 300px (content) + 2*25px (padding) + 2*4px (border) + 2*20px (margin) = 398px
 */
 
 
