--- a/css/flex.css
+++ b/css/flex.css
@@ -28,3 +28,15 @@
     order: 1;
     align-self: flex-end;
 }
+
+
+.container-2 {
+    margin-top: 5vh;
+    border: 5px solid gold;
+    height: 800px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    /* align-content: space-evenly; */
+    column-gap: 20px;
+}
